--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,27 +4,28 @@ if(POLICY CMP0169)
     cmake_policy(SET CMP0169 OLD)
 endif()
 
-project(DataStructureVisualization)
+project(data-structure-visualization)
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 
-find_package(SFML 2.5 COMPONENTS graphics window system audio network REQUIRED)
+find_package(SFML REQUIRED COMPONENTS Graphics Window System Audio)
 find_package(ImGui-SFML REQUIRED)
 
 include_directories(${CMAKE_SOURCE_DIR}/include)
 
-add_executable(DataStructureVisualization
+add_executable(data-structure-visualization
     src/main.cpp 
     
 )
 
-target_link_libraries(DataStructureVisualization PRIVATE 
-    sfml-graphics
-    sfml-window
-    sfml-system
+target_link_libraries(data-structure-visualization PRIVATE 
+    SFML::Graphics 
+    SFML::Window 
+    SFML::System 
+    SFML::Audio
     ImGui-SFML::ImGui-SFML
 )
 
